--- a/xorg/gromit-mpx.cfg
+++ b/xorg/gromit-mpx.cfg
@@ -1,13 +1,22 @@
-"red Pen" = PEN (size=5 color="red");
-"blue Pen" = "red Pen" (color="blue");
-"yellow Pen" = "red Pen" (color="yellow");
-"green Marker" = PEN (size=6 color="green" arrowsize=1);
+"green Pen" = PEN (size=15 color="green");
+"red Pen" = PEN (size=15 color="green");
+"blue Pen" = "green Pen" (color="blue");
+"yellow Pen" = "green Pen" (color="yellow");
+"green Marker" = PEN (size=20 color="green" arrowsize=2);
 
 "Eraser" = ERASER (size = 75);
 
-"default" = "red Pen";
-"default"[SHIFT] = "blue Pen";
+"default" = "green Pen";
+"default"[SHIFT] = "green Marker";
 "default"[CONTROL] = "yellow Pen";
-"default"[2] = "green Marker";
-"default"[Button3] = "Eraser";
+
+"default"[Button3] = "red Pen";
+"default"[Button2] = "Eraser";
+
+#"Virtual core pointer" = "red Pen";
+#"Test pointer" = "green Pen";
+#"Test pointer"[10] = "green Pen";
+#"Test pointer"[Button1] = "green Pen";
+#"Test pointer"[1] = "green Pen";
+#"Wacom ISDv4 Pen Stylus"[1] = "blue Pen";
 
