change to ssh mrconfig

--- a/vcs/.mrconfig
+++ b/vcs/.mrconfig
@@ -4,12 +4,13 @@
 [DEFAULT]
 # Include all available libs.
 include = cat /usr/share/mr/* 2>/dev/null || true
-lib = git config --global credential.helper 'cache --timeout=3600';
-      [ -n "${AUTH_USERNAME}" -a -n "${AUTH_PASSWORD}" ] \
-      && _auth_string="${AUTH_USERNAME}:${AUTH_PASSWORD}@" || set _auth_string
-      GITHUB="git clone https://${_auth_string}github.com/altercation"
-      echo "USING AUTH STRING ${_auth_string}"; read _pause
+lib = GITHUB="git clone git@github.com:altercation"
       ES=es-
+
+      #git config --global credential.helper 'cache --timeout=3600';
+      #[ -n "${AUTH_USERNAME}" -a -n "${AUTH_PASSWORD}" ] \
+      #&& _auth_string="${AUTH_USERNAME}:${AUTH_PASSWORD}@" || set _auth_string
+      #GITHUB="git clone https://${_auth_string}github.com/altercation"
 
 # anx - git-annex - aud, img, vid
 # inf - info, research (subdirs but monolithic)
