--- a/xorg/.xmonad/.xmobarrc
+++ b/xorg/.xmonad/.xmobarrc
@@ -12,13 +12,15 @@ Config  {
                           , Run StdinReader
                           , Run BatteryP ["BAT0","BAT1","BAT2"] ["-t", "PWR <acstatus><watts>W <left>% <timeleft>", "--", "-O", "AC+", "-o", ""] 10
                           , Run Weather "KSEA" ["-t","Seattle:<tempF>°|<skyCondition>"] 36000
-                          , Run Cpu ["-t","CPU <total>%","-p","2","-L","50","-H","80","--normal","yellow","--high","red"] 25
-                          , Run CpuFreq ["-t", "<cpu0>", "-L", "0", "-H", "2", "-l", "#6c71c4", "-n","#6c71c4", "-h", "#719e07"] 25
-                          , Run Swap ["-t","SWP <usedratio>%","-p","2","-L","50","-H","80","--normal","yellow","--high","red"] 25
-                          , Run Wireless "wlan0" ["-t","WFI <qualitybar>"] 25
+                          , Run Cpu ["-t","CPU <total>%","-p","2","-L","50","-H","80","--normal","yellow","--high","red","-c","0"] 25
+                          , Run CpuFreq ["-t", "<cpu0>","-L","0","-H","2","-l","#6c71c4","-n","#6c71c4","-h","#719e07"] 25
+                          , Run Swap ["-t","SWP <usedratio>%","-c","0","-p","2","-L","50","-H","80","--normal","yellow","--high","red"] 25
+                          , Run Wireless "wlan0" ["-t","WFI <qualitybar>","-b","-","-f",">","-W","5"] 25
                           , Run DiskU [("/", "<size>(<usedp>%)")] ["-L","20","-H","50","-m","1","-p","2"] 20
+                          , Run Com "xmobar-pwr" ["-s","-r"] "pwrmode" 25
+                          , Run Com "xmobar-tab" ["-s","-r"] "tabmode" 50
                           ]
         , sepChar       = "%"
         , alignSep      = "}{"
-        , template      = " %StdinReader% }{ <fc=#2aa198>%wlan0wi%</fc>  <fc=#6c71c4>DSK %disku%</fc>  <fc=#93a1a1>%battery%</fc>  <fc=#6c71c4>%cpu% %cpufreq%  %swap%</fc>  <fc=#268bd2>%theDate%</fc> "
+        , template      = " %StdinReader% }{ <fc=#2aa198>%wlan0wi%</fc> <fc=#6c71c4>DSK %disku%</fc> <fc=#93a1a1>%battery%</fc> <fc=#6c71c4>%cpu% %cpufreq% %swap%</fc> <fc=#268bd2>%theDate%</fc> %pwrmode% %tabmode%"
         }
