mail updates; dunst config update

--- a/mail/.offlineimaprc
+++ b/mail/.offlineimaprc
@@ -1,27 +1,27 @@
-# offlineimap configuration file
-#
+# Offlineimap configuration file
 # es@ethanschoonover.com
 
-##################################################
-# General definitions
-##################################################
+# ---------------------------------------------------------------------
+# General settings
+# ---------------------------------------------------------------------
 
 [general]
-metadata = ~/var/mail/offlineimap
-accounts = gmail
-maxsyncaccounts = 1
-# ui is one of machineui, blinkenlights, quiet, ttyui, basic
-ui = basic
-ignore-readonly = no
-pythonfile = ~/etc/mail/offlineimap.py
-socktimeout = 60
-fsync = true
 
-##################################################
+metadata = ~/var/mail/offlineimap
+accounts = es
+maxsyncaccounts = 2
+ui = basic
+#pythonfile = ~/etc/mail/offlineimap.py
+# socktimeout = 60
+# skip forced fsyncing; higher performance, higher risk
+fsync = false
+
+# ---------------------------------------------------------------------
 # Mailbox name recorder
-##################################################
+# ---------------------------------------------------------------------
 
 [mbnames]
+
 enabled = yes
 filename = ~/var/mail/mailboxes
 header = "mailboxes "
@@ -30,77 +30,85 @@ peritem = "+%(foldername)s"
 sep = " "
 footer = "\n"
 
-##################################################
-# Accounts
-##################################################
+# ---------------------------------------------------------------------
+# Account - es
+# ---------------------------------------------------------------------
 
-[Account gmail]
-localrepository = gmail_local
-remoterepository = gmail_remote
-#postsynchook = notmuch new
+[Account es]
 
-#following settings if we use continuous autorefresh; unfortunately offlineimap
-#isn't so stable on it's own, so we instead run it via cron as a full sync each
-#time. auto sync settings commented out here for reference.
-#autorefresh = 1
-#quick = 10
-# presynchook = imapfilter
+localrepository = eslocal
+remoterepository = esremote
+autorefresh = 5
+quick = 10
+status_backend = sqlite
+# presynchook = imapfilter -c someotherconfig.lua
 # postsynchook = notifysync.sh
 # maxsize = 2000000
-#
-# consider limiting age to reduce storage on laptop
-# maxage = 5
+# maxage =
 
-[Repository gmail_local]
-type = Maildir
-localfolders = ~/var/mail/accounts/gmail
-sep = /
-restoreatime = no
+# ---------------------------------------------------------------------
+# Local - es
+# ---------------------------------------------------------------------
 
-[Repository gmail_remote]
-type = Gmail
-remoteuser = es@ethanschoonover.com
-remotepassfile = ~/etc/sec/offlineimap.pass
-sslcacertfile = /etc/ssl/certs/ca-certificates.crt
-maxconnections = 3
+[Repository eslocal]
 
-# specific to desktop if we are using autorefresh above
-#holdconnectionopen = yes
-#keepalive = 30
+type               = Maildir
+localfolders       = ~/var/mail/accounts/es
+sep                = /
+nametrans          = lambda foldername: \
+                     re.sub('inbox',    'INBOX',
+                     re.sub('archive',  '[Gmail]/All Mail',
+                     re.sub('chats',    '[Gmail]/Chats',
+                     re.sub('drafts',   '[Gmail]/Drafts',
+                     re.sub('flagged',  '[Gmail]/Starred',
+                     re.sub('important','[Gmail]/Important',
+                     re.sub('sent',     '[Gmail]/Sent Mail',
+                     re.sub('spam',     '[Gmail]/Spam',
+                     re.sub('trash',    '[Gmail]/Trash',
+                     re.sub('_',        ' ',
+                     foldername))))))))))
 
-# expunge = no
-subscribedonly = no
-realdelete = no
-trashfolder = [Gmail]/Trash
-spamfolder = [Gmail]/Spam
-#
-# Filter for specific folders; applied *BEFORE* nametrans.
-#folderfilter = lambda foldername:  foldername in [
-#                                   'INBOX', 
-#                                   '[Gmail]/Starred']
-#the following filter will prevent gmail from properly trashing messages that
-#have been "truly" deleted in mutt by moving them to the trash (if Trash folder
-#is filtered out).
-folderfilter = lambda foldername:  foldername not in [
-                                   '[Gmail]/Spam',
-                                   '[Gmail]/All Mail']
-#folderfilter = lambda foldername:  foldername not in [
-#                                   '[Gmail]/Trash',
-#                                   '[Gmail]/Spam']
-#
-# Translate folder names
-# This removes the [Gmail] prefix, converts everything to lowercase (good?)
-# and renames some gmail folders to alternates
-nametrans = lambda foldername:  re.sub ('^\[gmail\].',  '',
-                                re.sub ('inbox',        'INBOX',
-                                re.sub ('sent_mail',    'sent',
-                                re.sub ('all_mail',     'archive',
-                                re.sub ('starred',      'flagged',
-                                re.sub (' ',            '_',        foldername.lower()
-                                ))))))
 
-# Sort folders; applied *AFTER* nametrans, if any.
-# We'll use a python helper function from offlineimap.py (sourced above)
-#foldersort = lambda x, y: mycmp(x, y)
-#determines which folders get synchronized first
-foldersort = mycmp
+# ---------------------------------------------------------------------
+# Remote - es
+# ---------------------------------------------------------------------
+
+[Repository esremote]
+
+type               = Gmail
+# when cert changes, offlineimap will error and report new fingerprint
+cert_fingerprint   = 6d1b5b5ee0180ab493b71d3b94534b5ab937d042
+remoteuser         = es@ethanschoonover.com
+#password sourced from netrc
+maxconnections     = 3
+holdconnectionopen = yes
+keepalive          = 20
+readonly           = False
+idlefolders        = ['INBOX']
+subscribedonly     = no
+expunge            = yes
+createfolders      = True
+trashfolder        = [Gmail]/Trash
+spamfolder         = [Gmail]/Spam
+#foldersort        = lambda x, y: -cmp(x, y)
+#foldersort        = mycmp
+#folderincludes    = ['example.mailbox', 'example.override']
+#folderfilter      = lambda foldername:    foldername not in [
+#folderfilter       = lambda foldername:    foldername in [
+#                                           'INBOX',
+#                                           '[Gmail]/Trash',
+#                                           'test']
+folderfilter       = lambda foldername:    foldername not in [
+                                           '[Gmail]/All Mail',
+                                           '[Gmail]/Chats']
+nametrans          = lambda foldername:  \
+                     re.sub('^\[gmail\].', '',
+                     re.sub('all_mail',    'archive',
+                     re.sub('starred',     'flagged',
+                     re.sub('important',   'priority',
+                     re.sub('sent_mail',   'sent',
+                     re.sub(' ',           '_', 
+                     foldername.lower()
+                     ))))))
+
+
