--- a/vcs/.mrconfig
+++ b/vcs/.mrconfig
@@ -85,9 +85,14 @@ fixups =   HOME_REPO_FIXUPS
 
 #[shr]
 
+[var]
+# dummy target to mkdir upon checkout
+checkout = mkdir -p $HOME/var/mail/{log,queue,offlineimap,accounts/es,mutt/cache,mutt/temp}; touch $HOME/var/mail/contacts/aliases
+status = :
+order = 25
+
 [tmp]
-# This is a dummy target, all it does is run fixups
-# at the end of an update.
+# dummy target to mkdir upon checkout, fixups on update
 # fixups = $HOME/etc/conform
 checkout = mkdir -p $HOME/tmp
 status = :
