--- a/xorg/.xmonad/.xmobarrc
+++ b/xorg/.xmonad/.xmobarrc
@@ -8,21 +8,23 @@ Config  {
         , lowerOnStart  = True
         , hideOnStart   = False
         , persistent    = False
-        , commands      = [ Run Date "%^a %^b %_d %H:%M" "theDate" 10
+        , commands      = [ Run Date "<fc=#b58900>%^a %^b %_d %H:%M</fc>" "theDate" 10
                           , Run StdinReader
-                          , Run BatteryP ["BAT0","BAT1","BAT2"] ["-t", "PWR <acstatus><watts>W <left>% <timeleft>", "--", "-O", "AC+", "-o", ""] 10
+                          , Run BatteryP ["BAT0","BAT1","BAT2"] ["-t", "<acstatus> <watts> W <left>% <timeleft></fc>", "--", "-O", "<fc=#719e07>AC", "-o", "<fc=#b58900>BATT"] 10
                           , Run Weather "KSEA" ["-t","Seattle:<tempF>°|<skyCondition>"] 36000
-                          , Run Cpu ["-t","CPU <total>%","-p","2","-L","50","-H","80","--normal","yellow","--high","red","-c","0"] 25
-                          , Run CpuFreq ["-t", "<cpu0>","-L","0","-H","2","-l","#6c71c4","-n","#6c71c4","-h","#719e07","-m","7"] 25
-                          , Run Swap ["-t","SWP <usedratio>%","-c","0","-p","2","-L","50","-H","80","--normal","yellow","--high","red"] 25
+                          , Run Cpu ["-t","CPU <total>%","-p","2","-L","50","-H","80","-l","#657b83","--normal","#93a1a1","--high","#dc322f","-c","0"] 25
+                          , Run CpuFreq ["-t", "FRQ <cpu0>","-L","0","-H","2","-l","#657b83","-n","#657b83","-h","#93a1a1","-M","3","-d","0"] 25
+                          , Run Swap ["-t","SWP <usedratio>%","-c","0","-p","2","-L","50","-H","80","-l","#657b83","--normal","#b58900","--high","#dc322f"] 25
                           , Run Wireless "wlan0" ["-t","WFI <qualitybar>","-b","-","-f",">","-W","5"] 25
                           , Run DiskU [("/", "<size>(<usedp>%)")] ["-L","20","-H","50","-m","1","-p","2"] 20
-                          , Run Com "xmobar-pwr" ["-s","-r"] "pwrmode" 25
-                          , Run Com "xmobar-tab" ["-s","-r"] "tabmode" 50
-                          , Run Memory ["-t","Mem: <usedratio>%(<cache>M)"] 10
-                          , Run CoreTemp ["-t", "<core0>C", "-L", "40", "-H", "60", "-l", "lightblue", "-n", "gray90", "-h", "red"] 50
+                          , Run Com "xmobar-pwr" [] "pwrmode" 25
+                          , Run Com "xmobar-tab" [] "tabmode" 50
+                          , Run Com "mailqcount" [] "mailq" 200
+                          , Run Com "mailcount" [] "mail" 200
+                          , Run Memory ["-t","MEM <usedratio>%(<cache>M)"] 10
+                          , Run CoreTemp ["-t", "<core0>°", "-L", "40", "-H", "60", "-l", "#657b83", "-n", "#93a1a1", "-h", "#dc322f"] 50
                           ]
         , sepChar       = "%"
         , alignSep      = "}{"
-        , template      = " %StdinReader% }{ <fc=#2aa198>%wlan0wi%</fc> <fc=#6c71c4>DSK %disku%</fc> <fc=#93a1a1>%battery%</fc> <fc=#6c71c4>%cpu% %cpufreq% %coretemp% %memory% %swap%</fc> <fc=#268bd2>%theDate%</fc> %pwrmode% %tabmode%"
+        , template      = " %StdinReader% }{ %wlan0wi% » %battery% » %cpu% %cpufreq% %coretemp% %memory% %swap% DSK %disku% » %theDate% » %mail% %mailq% » %pwrmode% %tabmode%"
         }
