converted all xmobar values / xmonad pp to solarized

--- a/xorg/.xmonad/.xmobarrc
+++ b/xorg/.xmonad/.xmobarrc
@@ -8,14 +8,14 @@ Config  {
         , lowerOnStart  = True
         , hideOnStart   = False
         , persistent    = False
-        , commands      = [ Run Date "<fc=#b58900>%^a %^b %_d %H:%M</fc>" "theDate" 10
+        , commands      = [ Run Date "<fc=#6c71c4>%^a %^b %_d %H:%M</fc>" "theDate" 10
                           , Run StdinReader
-                          , Run BatteryP ["BAT0","BAT1","BAT2"] ["-t", "<acstatus> <watts> W <left>% <timeleft></fc>", "--", "-O", "<fc=#719e07>AC", "-o", "<fc=#b58900>BATT"] 10
+                          , Run BatteryP ["BAT0","BAT1","BAT2"] ["-t", "<acstatus> <watts> W <left>% <timeleft></fc>", "--", "-O", "<fc=#719e07>AC", "-o", "<fc=#d33682>BATT"] 10
                           , Run Weather "KSEA" ["-t","Seattle:<tempF>°|<skyCondition>"] 36000
                           , Run Cpu ["-t","CPU <total>%","-p","2","-L","50","-H","80","-l","#657b83","--normal","#93a1a1","--high","#dc322f","-c","0"] 25
                           , Run CpuFreq ["-t", "FRQ <cpu0>","-L","0","-H","2","-l","#657b83","-n","#657b83","-h","#93a1a1","-M","3","-d","0"] 25
                           , Run Swap ["-t","SWP <usedratio>%","-c","0","-p","2","-L","50","-H","80","-l","#657b83","--normal","#b58900","--high","#dc322f"] 25
-                          , Run Wireless "wlan0" ["-t","WFI <qualitybar>","-b","-","-f",">","-W","5"] 25
+                          , Run Wireless "wlan0" ["-t","<fc=#2aa198>WFI <qualitybar></fc>","-b","-","-f",">","-W","5"] 25
                           , Run DiskU [("/", "DSK <size>(<usedp>%)")] ["-L","20","-H","50","-m","1","-p","2"] 20
                           , Run Com "xmobar-pwr" [] "pwrmode" 25
                           , Run Com "xmobar-tab" [] "tabmode" 50
@@ -26,5 +26,5 @@ Config  {
                           ]
         , sepChar       = "%"
         , alignSep      = "}{"
-        , template      = " %StdinReader% }{ %wlan0wi%  :  %battery%  :  %cpu% %cpufreq% %coretemp%  :  %memory% %swap%  :  %disku%  :  %theDate%  :  %mail% %mailq%  :  %pwrmode% %tabmode% "
+        , template      = " %StdinReader% }{ %wlan0wi%  :  %battery%  :  %cpu% %cpufreq% %coretemp%  :  %memory% %swap%  :  %disku%  :  %theDate%  :  %mail% %mailq%  : %pwrmode%%tabmode% "
         }
