--- a/xorg/.xmonad/.xmobarrc
+++ b/xorg/.xmonad/.xmobarrc
@@ -10,13 +10,13 @@ Config  {
         , persistent    = False
         , commands      = [ Run Date "<fc=#b58900>%^a %^b %d %H:%M</fc>" "theDate" 100
                           , Run StdinReader
-                          , Run BatteryP ["BAT0","BAT1","BAT2"] ["-t", "<acstatus> <watts> W <left>% <timeleft></fc>", "--", "-O", "<fc=#719e07>AC", "-o", "<fc=#dc322f>BATT"] 50
+                          , Run BatteryP ["BAT0","BAT1","BAT2"] ["-t", "<acstatus> <watts> W <left>% <timeleft></fc>", "-L","10","-l","#fdf6e3","--", "-O", "<fc=#719e07>AC", "-o", "<fc=#dc322f>BATT"] 50
                           , Run Weather "KSEA" ["-t","Seattle:<tempF>°|<skyCondition>"] 36000
-                          , Run Cpu ["-t","CPU <total>%","-p","2","-L","50","-H","80","-l","#657b83","--normal","#93a1a1","--high","#dc322f","-c","0"] 25
+                          , Run Cpu ["-t","C <total>%","-p","2","-L","50","-H","80","-l","#657b83","--normal","#93a1a1","--high","#dc322f","-c","0"] 25
                           , Run CpuFreq ["-t", "FRQ <cpu0>","-L","0","-H","2","-l","#657b83","-n","#657b83","-h","#93a1a1","-M","3","-d","0"] 25
                           , Run Swap ["-t","SWP <usedratio>%","-c","0","-p","2","-L","50","-H","80","-l","#657b83","--normal","#b58900","--high","#dc322f"] 25
                           , Run Wireless "wlan0" ["-t","<fc=#2aa198>WFI <qualitybar></fc>","-b","-","-f",">","-W","5"] 25
-                          , Run DiskU [("/", "DSK <size>(<usedp>%)")] ["-L","20","-H","50","-m","1","-p","2"] 200
+                          , Run DiskU [("/", "D <size>(<usedp>%)")] ["-L","20","-H","50","-m","1","-p","2"] 200
                           , Run Com "xmobar-pwr" [] "pwrmode" 25
                           , Run Com "xmobar-tab" [] "tabmode" 200
                           , Run Com "mailqcount" [] "mailq" 200
@@ -26,5 +26,5 @@ Config  {
                           ]
         , sepChar       = "%"
         , alignSep      = "}{"
-        , template      = " %StdinReader% }{ %wlan0wi%  %battery%  %theDate%  %mail% %mailq%  %pwrmode%%tabmode% "
+        , template      = " %StdinReader% }{ %wlan0wi%  %battery%  %cpu% %disku%  %theDate%  %mail% %mailq%  %pwrmode%%tabmode% "
         }
