migrate xmobar to non pipe xmonad status input

--- a/xorg/.xmonad/.xmobarrc
+++ b/xorg/.xmonad/.xmobarrc
@@ -23,8 +23,9 @@ Config  {
                           , Run Com "mailcount" [] "mail" 200
                           , Run Memory ["-t","MEM <usedratio>%","-L","50","-H","75","-l","#657b83","-n","#93a1a1","-h","#dc322f"] 200
                           , Run CoreTemp ["-t", "<core0>°", "-L", "50", "-H", "65", "-l", "#657b83", "-n", "#93a1a1", "-h", "#dc322f"] 50
+                          , Run XMonadLog
                           ]
         , sepChar       = "%"
         , alignSep      = "}{"
-        , template      = " %StdinReader% }{ %wlan0wi%  %battery%  %cpu% %disku%  %theDate%  %mail% %mailq%  %pwrmode%%tabmode% "
+        , template      = " %XMonadLog% }{ %wlan0wi%  %battery%  %cpu% %cpufreq% %disku%  %theDate%  %mail% %mailq%  %pwrmode%%tabmode% "
         }
